--- a/backend/Post-Feed/Post-Feed.html
+++ b/backend/Post-Feed/Post-Feed.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="Post-Feed.js"></script>
     <script src="Topic_Form_Process.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <style>
         body { font-family: Arial, sans-serif; margin: 20px; }
         .post { border: 1px solid #ccc; padding: 15px; margin-bottom: 10px; border-radius: 5px; }
