--- a/backend/Post-Feed/Post-Feed.html
+++ b/backend/Post-Feed/Post-Feed.html
@@ -1,46 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Post Feed</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="Post-Feed.js"></script>
-    <script src="Topic_Form_Process.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <style>
-        body { font-family: Arial, sans-serif; margin: 20px; }
-        .post { border: 1px solid #ccc; padding: 15px; margin-bottom: 10px; border-radius: 5px; }
-        .post-title { font-weight: bold; font-size: 1.2em; }
-        .post-content { margin-top: 8px; }
-    </style>
+  <meta charset="UTF-8">
+  <title>Post Feed</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <style>
+    body { font-family: Arial, sans-serif; margin: 20px; }
+    .post { border: 1px solid #ccc; padding: 15px; margin-bottom: 10px; border-radius: 5px; }
+    .post-title { font-weight: bold; font-size: 1.2em; }
+    .post-content { margin-top: 8px; }
+    .Topic-PopUp { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+                   background: rgba(0,0,0,0.5); }
+    .Topic-PopUp-Content { background: #fff; padding: 20px; margin: 10% auto; width: 300px; border-radius: 8px; }
+    .close { cursor: pointer; float: right; }
+  </style>
 </head>
 
 <body>
-    <div class="Topic-PopUp" display="none">
-        <div class="Topic-PopUp-Content">
-            <span class="close" onclick="closeTopicPopUp()">&times;</span>
-            <h2>Create New Topic</h2>
-            <form id="topic-form" action ='' method="POST">
-            <label for="topic-title">Title:</label><br>
-            <input type="text" name="topic-title"  placeholder="Topic Title" required></input>
-            <br><br>
-            <label for="topic-description">Description:</label><br>
-            <input type="textarea" name="topic-description" placeholder="Topic Description" required></input>
-            <br><br>
-            <input type="submit" value="Create Topic">
-            </form>
-            <button onclick="closeTopicPopUp()">Cancel</button>
-        </div>
-    </div>
+  <div class="Topic-PopUp">
+    <div class="Topic-PopUp-Content">
+      <span class="close" onclick="closeTopicPopUp()">&times;</span>
+      <h2>Create New Topic</h2>
+      <form id="topic-form" method="POST">
+        <label for="topic-title">Title:</label><br>
+        <input type="text" name="topic-title" id="topic-title" placeholder="Topic Title" required><br><br>
 
-    <nav>
-        <button onclick="displayTopicPopUp()">Create Topic</button>
-        <button onclick="">View Topics</button>
-        <button onclick="">Search Topic</button>
-    </nav>
-    <h1>Topic Feed</h1>
-    <div id="topics-container">
-        <!-- Posts will be dynamically loaded here-->
+        <label for="topic-description">Description:</label><br>
+        <textarea name="topic-description" id="topic-description" placeholder="Topic Description" required></textarea><br><br>
+
+        <input type="submit" value="Create Topic">
+      </form>
+      <button onclick="closeTopicPopUp()">Cancel</button>
     </div>
+  </div>
+
+  <nav>
+    <button onclick="displayTopicPopUp()">Create Topic</button>
+    <button onclick="searchTopic()">Search Topic</button>
+  </nav>
+
+  <h1>Topic Feed</h1>
+  <div id="topics-container"></div>
+
+  <!-- Load JS at bottom -->
+  
+  <script src="Post-Feed.js"></script>
+  <script src="Topic_Form_Process.js"></script>
 </body>
 </html>
