post display fixed -> filtering based on topic

--- a/backend/Post-Feed/Topic-Feed.html
+++ b/backend/Post-Feed/Topic-Feed.html
@@ -38,6 +38,7 @@
   <nav>
     <button onclick="displayTopicPopUp()">Create Topic</button>
     <button onclick="searchTopic()">Search Topic</button>
+    <button onclick="loadTopics()">Refresh Topics </button>
   </nav>
 
   <h1>Topic Feed</h1>
