--- a/frontend/Post-Feed/Topic-Feed.html
+++ b/frontend/Post-Feed/Topic-Feed.html
@@ -46,7 +46,7 @@
 
   <!-- Load JS at bottom -->
   
-  <script src="Topic-Feed.js"></script>
-  <script src="Topic_Form_Process.js"></script>
+  <script src="/backend/Post-Feed/Topic_Form_Process.js"></script>
+  <script src="/backend/Post-Feed/Topic-Feed.js"></script>
 </body>
 </html>
