--- a/frontend/Post-Feed/Topic.html
+++ b/frontend/Post-Feed/Topic.html
@@ -47,7 +47,7 @@
 
   <!-- Load JS at bottom -->
   
-  <script src="Topic.js"></script>
-  <script src="Post_Form_Process.js"></script>
+  <script src="/backend/Post-Feed/Topic.js"></script>
+  <script src="/backend/Post-Feed/Post_Form_Process.js"></script>
 </body>
 </html>
